--- a/src/AlternativePayments.Tests/AlternativePayments.Tests.csproj
+++ b/src/AlternativePayments.Tests/AlternativePayments.Tests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\TestCustomers.cs" />
+    <Compile Include="Services\TestHostedSubscriptions.cs" />
     <Compile Include="Services\TestPayments.cs" />
     <Compile Include="Services\TestPhoneVerification.cs" />
     <Compile Include="Services\TestPlans.cs" />
