new methods for version 1.3

--- a/src/AlternativePayments.Tests/AlternativePayments.Tests.csproj
+++ b/src/AlternativePayments.Tests/AlternativePayments.Tests.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TestAcquirerSupportedInstitutions.cs" />
     <Compile Include="Services\TestCustomers.cs" />
     <Compile Include="Services\TestHostedSubscriptions.cs" />
     <Compile Include="Services\TestPayments.cs" />
