--- a/src/AlternativePayments/AlternativePayments.csproj
+++ b/src/AlternativePayments/AlternativePayments.csproj
@@ -55,11 +55,13 @@
     <Compile Include="Infrastructure\Constants\Urls.cs" />
     <Compile Include="Infrastructure\Exceptions\AlternativePaymentsException.cs" />
     <Compile Include="Models\BaseModel.cs" />
+    <Compile Include="Models\CountrySupportedInstitutions.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Filters\CommonFilter.cs" />
     <Compile Include="Models\HostedPage\SubscriptionCustomer.cs" />
     <Compile Include="Models\HostedPage\SepaPaymentInfo.cs" />
+    <Compile Include="Models\Institution.cs" />
     <Compile Include="Models\Pagination.cs" />
     <Compile Include="Models\Payment.cs" />
     <Compile Include="Models\PhoneVerification.cs" />
@@ -69,12 +71,15 @@
     <Compile Include="Models\Subscription.cs" />
     <Compile Include="Models\HostedPage\HostedSubscription.cs" />
     <Compile Include="Models\Transaction.cs" />
+    <Compile Include="Models\TransactionAuthorization.cs" />
+    <Compile Include="Models\TransactionAuthorizationCredential.cs" />
     <Compile Include="Models\TransactionList.cs" />
     <Compile Include="Models\Void.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
     <Compile Include="Services\Customers\CustomerService.cs" />
     <Compile Include="Services\HostedSubscriptions\HostedSubscriptionService.cs" />
+    <Compile Include="Services\Institutions\AcquirerSupportedInstitutionsService.cs" />
     <Compile Include="Services\Payments\PaymentService.cs" />
     <Compile Include="Services\PhoneVerification\PhoneVerificationService.cs" />
     <Compile Include="Services\Plans\PlanService.cs" />
@@ -89,7 +94,6 @@
     <None Include="AlternativePayments.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
